--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Software AI Agency Website</title>
+    
+    <!-- Performance Optimization: Preconnect to Font domains -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://db.onlinewebfonts.com">
+
+    <!-- Critical Fonts Loading -->
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/6949f57d472251f2dc3839257632616a?family=Stolzl+Medium" rel="stylesheet" type="text/css"/>
+
+    <title>Akinahs Collective | Digital Solutions & AI Agency</title>
+    <meta name="description" content="Akinahs Collective - High-performance digital solutions, software development, and AI integration for modern businesses." />
     <meta property="og:image" content="https://bolt.new/static/og_default.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
